write an AppRouter to map URLs to views

--- a/app/assets/templates/todos/index.jst.ejs
+++ b/app/assets/templates/todos/index.jst.ejs
@@ -1,5 +1,6 @@
 <h2>Index</h2>
 
+<button class="refresh">Refresh</button>
 <ul>
   <% todos.each(function (todo) { %>
     <!--
@@ -9,4 +10,4 @@
   <% }); %>
 </ul>
 
-<button class="refresh">Refresh</button>
+<a href="#/todos/new">New Todo</a>
