--- a/app/assets/templates/todos/show.jst.ejs
+++ b/app/assets/templates/todos/show.jst.ejs
@@ -1,9 +1,8 @@
-<!-- So many gets!! -->
-<h1><%= todo.get("title") %></h1>
+<h1><%= todo.escape("title") %></h1>
 
 <ul>
   <% todo.comments().each(function (comment) { %>
-    <li><%= comment.get("content") %></li>
+    <li><%= comment.escape("content") %></li>
   <% }); %>
 </ul>
 
