implement Markdown preview for CommentsNew BB view

--- a/app/assets/templates/comments/new.jst.ejs
+++ b/app/assets/templates/comments/new.jst.ejs
@@ -8,5 +8,9 @@
     Comment Content
     <textarea name="comment[content]"></textarea>
   </label>
+
   <input type="submit">
 </form>
+
+<div class="preview">
+</div>
