--- a/app/assets/templates/todos/show.jst.ejs
+++ b/app/assets/templates/todos/show.jst.ejs
@@ -2,7 +2,7 @@
 
 <ul>
   <% todo.comments().each(function (comment) { %>
-    <li><%= comment.escape("content") %></li>
+    <li><%= marked(comment.escape("content")) %></li>
   <% }); %>
 </ul>
 
