extract a CommentsShow BB view to allow deletion of Comment

--- a/app/assets/templates/todos/show.jst.ejs
+++ b/app/assets/templates/todos/show.jst.ejs
@@ -1,10 +1,6 @@
 <h1><%= todo.escape("title") %></h1>
 
-<ul>
-  <% todo.comments().each(function (comment) { %>
-    <li><%= marked(comment.escape("content")) %></li>
-  <% }); %>
-</ul>
+<ul class="comments"></ul>
 
 <div class="comments-new"></div>
 
