add begin/endEditing to CommentsShow

--- a/app/assets/templates/comments/show.jst.ejs
+++ b/app/assets/templates/comments/show.jst.ejs
@@ -1,4 +1,6 @@
 <li>
-  <%= marked(comment.escape("content")) %>
+  <div class="content">
+    <%= marked(comment.escape("content")) %>
+  </div>
   <button class="destroy">Destroy</button>
 </li>
