--- a/app/assets/templates/todos/index.jst.ejs
+++ b/app/assets/templates/todos/index.jst.ejs
@@ -1,14 +1,16 @@
 <h2>Index</h2>
 
 <button class="refresh">Refresh</button>
-<ul>
-  <% todos.each(function (todo) { %>
-    <li>
-      <a href="#/todos/<%= todo.id %>">
-        <%= todo.escape("title") %>
-      </a>
-    </li>
-  <% }); %>
-</ul>
+
+<table>
+  <thead>
+    <tr>
+      <th data-col="id">ID</th>
+      <th data-col="title">Title</th>
+    </tr>
+  </thead>
+
+  <tbody></tbody>
+</table>
 
 <a href="#/todos/new">New Todo</a>
