TableView: add ability to sort by function

--- a/app/assets/templates/todos/index.jst.ejs
+++ b/app/assets/templates/todos/index.jst.ejs
@@ -5,8 +5,8 @@
 <table>
   <thead>
     <tr>
-      <th data-col="id">ID</th>
-      <th data-col="title">Title</th>
+      <th data-sort-col="id">ID</th>
+      <th data-sort-fn="_titleLowerCase">Title</th>
     </tr>
   </thead>
 
